[package]
name = "serde_ignored"
version = "0.1.4" # update html_root_url and version in readme
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
rust-version = "1.36"
license = "MIT OR Apache-2.0"
description = "Find out about keys that are ignored when deserializing data"
repository = "https://github.com/dtolnay/serde-ignored"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
