[package]
name = "serde_ignored"
version = "0.1.9" # update html_root_url and version in readme
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "no-std"]
description = "Find out about keys that are ignored when deserializing data"
edition = "2018"
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/serde-ignored"
rust-version = "1.36"

[dependencies]
serde = { version = "1.0.166", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = "1.0.166"
serde_json = "1.0.100"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
